# monster-killer

./: CMakeLists.txt  build.bat  build_debug.bat  clean.bat  milestone.md
src/: main.c  types.h
src/animation/: animation.c  animation.h
src/audio/: audio_manager.c  audio_manager.h  sound_manager.c  sound_manager.h
src/boss/: boss.c  boss.h  boss_ai.c  boss_ai.h
src/camera/: camera.c  camera.h  rail_path.c  rail_path.h
src/enemy/: enemy.c  enemy.h  enemy_ai.c  enemy_ai.h  enemy_states.c  enemy_states.h
src/engine/: config.c  config.h  engine.c  engine.h
src/events/: event_system.c  event_system.h  triggers.c  triggers.h
src/map/: map.c  map.h  map_loader.c  map_loader.h
src/particles/: blood.c  blood.h  particles.c  particles.h
src/physics/: collision.c  collision.h
src/player/: aiming.c  aiming.h  player.c  player.h
src/raycaster/: raycaster.c  raycaster.h
src/renderer/: renderer.c  renderer.h  texture_manager.c  texture_manager.h
src/save/: savegame.c  savegame.h
src/sprites/: sprite_atlas.c  sprite_atlas.h  sprites.c  sprites.h
src/ui/: hud.c  hud.h  menu.c  menu.h  ui.c  ui.h
src/utilities/: math_utils.c  math_utils.h  memory_pool.c  memory_pool.h  random.c  random.h  string_utils.c  string_utils.h
src/weapons/: weapon.c  weapon.h  weapon_data.c  weapon_data.h
